no longer getting stuck on unsuitable turning block

--- a/turtle.mw
+++ b/turtle.mw
@@ -95,7 +95,6 @@ include stdlib.mw
 		unget_word("get_current_orientation_with_block")
 	end
 ;;
-" FIXME: this gets itself stuck if it inspects an unsuitable block, as it will not reinspect after that " del
 : get_current_orientation_with_block selected # 16 select u place u inspect get_current_orientation_with_block_internal u dig swap select ;
 :: get_current_orientation_with_block_internal retry
 	local b = pop()
@@ -103,6 +102,8 @@ include stdlib.mw
 	if b and b.state and valid_directions[b.state.facing] then
 		push(b.state.facing)
 	else
+		unget_word("inspect")
+		checkpoint()
 		error("UNSUITABLE BLOCK FOR FIGURING OUT ORIENTATION")
 	end
 ;;
