i have no idea what to name my commits

--- a/tests/test_colors_term.mw
+++ b/tests/test_colors_term.mw
@@ -1,6 +1,6 @@
-include term.mw
+include lib/term.mw
 include stdlib.mw
-include colors.mw
+include lib/colors.mw
 
 : test_color
     term_setBackgroundColor
