--- a/examples/lava-catcher.mw
+++ b/examples/lava-catcher.mw
@@ -48,7 +48,7 @@ include turtle.mw
 : pack_things # 1 select u dig ;
 : drain_column place_things aquire_bucket aquire_lava success? go_to_surface { do_thing_with_bucket drain_column } { pack_things } ifelse ;
 
-: drain_chunk # 16 # 16 { drain_column } patrol ;
+: drain_chunk # 16 # 16 { drain_column cooldown cooldown } patrol ;
 : next_chunk { f move } # 7 times l turn { f move } # 9 times ;
 
 :: sucking_cauldron retry
